--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "onoff": "1.1.3",
-    "dateformat": "2.0.0"
+    "dateformat": "2.0.0",
+    "phantomjs2": "2.2.0"
   }
 }
