--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "onoff": "1.1.3",
     "dateformat": "2.0.0",
-    "phantomjs2": "2.2.0"
+    "phantomjs2": "2.2.0",
+    "socket.io": "2.0.3"
   }
 }
