--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "onoff": "1.1.3",
     "dateformat": "2.0.0",
     "phantomjs2": "2.2.0",
-    "socket.io": "2.0.3"
+    "socket.io": "2.0.3",
+    "ws": "3.0.0"
   }
 }
