--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "shotMP",
   "version": "0.0.1",
   "dependencies": {
+    "canvas": "1.6.5",
     "onoff": "1.1.3",
     "dateformat": "2.0.0",
     "phantomjs2": "2.2.0",
     "socket.io": "2.0.3",
-    "ws": "3.0.0"
+    "ws": "3.0.0",
+    "time": "0.12.0",
+    "wait-until": "0.0.2",
+    "system": "1.3.0"
   }
 }
